<resources>
    <string name="app_name">α Tool</string>
    <string name="sensoro">SENSORO</string>
    <string name="alert_title">Tip</string>
    <string name="confirm">confirm</string>
    <string name="all">all</string>
    <string name="station_not_found">Station Not Found</string>
    <string name="setting_device">Config Device</string>
    <string name="setting_station">Config Station</string>
    <string name="setting_transfer">Config Transform</string>
    <string name="item_tv_power">Tx.:</string>
    <string name="item_tv_freq">Interval:</string>
    <string name="item_band">Band:</string>
    <string name="item_sf">SF:</string>
    <string name="item_tv_default">-</string>
    <string name="model">Model</string>
    <string name="equip_sn">Sn</string>
    <string name="device">Device</string>
    <string name="module">Module</string>
    <string name="copy_to_board">Copied to clipboard</string>
    <string name="exit">exit</string>
    <string name="tips_open_ble">Please Turn on Bluetooth</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="unknow">unkown</string>
    <string name="meter">meter</string>
    <string name="kilometer">kilometer</string>
    <string name="min_ago">m ago</string>
    <string name="h_ago">h ago</string>
    <string name="day_ago">d ago</string>
    <string name="year_ago">yr ago</string>
    <string name="now">now</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="send">Send:</string>
    <string name="receive">Receive:</string>
    <string name="success_rate">Success rate:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="qr_not_lora_station">The QR is not a station!</string>
    <string name="pick_qrpic">choose QR code picture</string>
    <string name="is_decoding">Decoding...</string>
    <string name="scan_code">Scan QR Code</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="wifi">WIFI</string>
    <string name="ethernet">Ethernet</string>
    <string name="_3g">3G</string>
    <string name="status">Status</string>
    <string name="status_normal">normal</string>
    <string name="status_fault">fault</string>
    <string name="status_serious">serious</string>
    <string name="status_timeout">timeout</string>
    <string name="status_inactive">inactive</string>
    <string name="status_offline">offline</string>
    <string name="one_min">1 min ago</string>
    <string name="search">search...</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="encrpt">Encrpt Method</string>
    <string name="sgl_dr">Spreading Factor</string>
    <string name="sgl_freq">Frequency</string>
    <string name="tag">tag</string>
    <string name="enter_dfu">Enter dfu mode</string>
    <string name="write_failed">Write failed</string>
    <string name="write_success">Write Success</string>
    <string name="connect_success">Connect Success</string>
    <string name="connect_failed">Connect Failed</string>
    <string name="update_version_error">The upgrade version must be greater than or equal to the current device version</string>
    <string name="target_error">Can not find target Object</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="hardware_version">HardWare Version</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="band">Band</string>
    <string name="firmware_error">The Firmware version number must be greater than or equal to 1.2 </string>
    <string name="invaild_url">Url starts with http:// or https://</string>
    <string name="invaild_uid">The Uid must be a hexadecimal character with a length of 32</string>
    <string name="invaild_app_key">The APP Key must be a hexadecimal character with a length of 32</string>
    <string name="invaild_eui">The EUI must be a hexadecimal character with a length of 16</string>
    <string name="invaild_custom">The Custom A hexadecimal character with a maximum length of 56 characters</string>
    <string name="filter_switch">Filter Switch</string>
    <string name="nearby">Near</string>
    <string name="station">Station</string>
    <string name="exit_main">Press again to exit the program</string>
    <string name="station_list">Station List</string>
    <string name="station_detail">Station Details</string>
    <string name="station_ssid">Station SSID:</string>
    <string name="station_pwd">Station Password:</string>
    <string name="terminal">Termail</string>
    <string name="checkself">Checkself</string>
    <string name="set_network">NetWork Configuration</string>
    <string name="connect_station">Connect Station</string>
    <string name="wifi_cn">Wifi</string>
    <string name="connect_station_network">Connect Station</string>
    <string name="ssid">SSID</string>
    <string name="copy">copy</string>
    <string name="next">next</string>
    <string name="qr_not_yunzi">The QR is not a beacon!</string>
    <string name="unknown">unknown</string>
    <string name="ip_address">Ip Address</string>
    <string name="commit">Commit</string>
    <string name="text_save">Save</string>
    <string name="text_null"></string>
    <string name="cancel">Cancel</string>
    <string name="total_device">Devices:</string>
    <string name="current_device">Current Device progress:</string>
    <string name="upgrading_device">Upgrading Device </string>
    <string name="broadcast_power">"Transmit Power</string>
    <string name="settings">Settings</string>
    <string name="ibeacon_function">iBeacon</string>
    <string name="broadcast_function">Broadcast</string>
    <string name="prevent_tampering">Prevent Tampering</string>
    <string name="prevent_squatters">Prevent Squatters</string>
    <string name="wide_area_setting">Wide Area Setting</string>
    <string name="net_id">Net ID</string>
    <string name="cloud_address">Cloud Address</string>
    <string name="cloud_port">Cloud Port</string>
    <string name="key">Key</string>
    <string name="wide_area_rf">Wide Area RF</string>
    <string name="app_eui">App Eui</string>
    <string name="app_key">App Key</string>
    <string name="app_session_key">App Session Key</string>
    <string name="network_session_key">Network Session Key</string>
    <string name="network_address">Network Address</string>
    <string name="data_rate">Data Rate</string>
    <string name="adaptive_data_rate">ADR</string>
    <string name="auto_data_rate">Auto data Rate</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="not_support">Unsupport</string>
    <string name="setting_alibeacon_settings">Enable AliBeacon</string>
    <string name="flash_light">Flash Light</string>
    <string name="flash_success">Flash Success</string>
    <string name="flash_failure">Flash Failure</string>
    <string name="management">Management</string>
    <string name="eddystone_slot1">Eddystone Slot 1</string>
    <string name="eddystone_slot2">Eddystone Slot 2</string>
    <string name="eddystone_slot3">Eddystone Slot 3</string>
    <string name="eddystone_slot4">Eddystone Slot 4</string>
    <string name="eid_list">EID List</string>
    <string name="slot1_name">Status</string>
    <string name="slot2_name">Init Clock</string>
    <string name="slot3_name">K</string>
    <string name="slot4_name">EID Identity Key</string>
    <string name="slot5_name">UID</string>
    <string name="slot6_name">URL</string>
    <string name="slot7_name">EID</string>
    <string name="slot8_name">TLM</string>
    <string name="eddystone_fuction">Eddystone Function</string>
    <string name="uid_broadcast">UID Broadcast</string>
    <string name="uid">UID</string>
    <string name="nid">Namespace ID</string>
    <string name="bid">Instance ID</string>
    <string name="url_broadcast">URL Broadcast</string>
    <string name="url">URL</string>
    <string name="tlm_broadcast">TLM Broadcast</string>
    <string name="tlm_broadcast_interval">TLM Interval</string>
    <string name="settings_uid">UID Settings</string>
    <string name="settings_bid">BID Settings</string>
    <string name="settings_url">URL Settings</string>
    <string name="settings_eid">EID Settings</string>
    <string name="tlm_interval_level0">Disabled</string>
    <string name="tlm_interval_level1">1:1</string>
    <string name="tlm_interval_level2">1:5</string>
    <string name="tlm_interval_level3">1:10</string>
    <string name="tlm_interval_level4">1:100</string>
    <string name="settings_mrssi">MRSSI Settings</string>
    <string name="settings_success">Settings Success</string>
    <string name="settings_failure">Settings Failure</string>
    <string name="disconnect_from_device">Disconnect From Remote Device</string>
    <string name="saving">Saving...</string>
    <string name="settings_tlm_interval">TLM Interval</string>
    <string name="shaking">Working Status</string>
    <string name="open_uid_url_eid_first">Oepn UID/URL/EID First</string>
    <string name="airlocate">AirLocate</string>
    <string name="estimote">Estimote</string>
    <string name="wx">WeChat</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal (0x)</string>
    <string name="scan_settings">Scan Settings</string>
    <string name="common_uuid">Common</string>
    <string name="uncompress_finish">Uncompress finish,start upgrade</string>
    <string name="start_download">Start download</string>
    <string name="loading">Loading&#8230;</string>
    <string name="pullup_loading">Pull Up To Load...</string>
    <string name="pulldown_loading">Pull Down To Refresh...</string>
    <string name="downloading">Downloading...</string>
    <string name="upgrade_finish">Upgrade Finish</string>
    <string name="upgrade_failed">Upgrade Failed</string>
    <string name="upgrade_end">Upgrade End</string>
    <string name="upgrading">Upgrading</string>
    <string name="upgrade_start">Upgrade Start</string>
    <string name="upgrade_add_nearby">Add NearBy</string>
    <string name="copyright">Copyright (c) 2013-2015 Sensoro Co., Ltd.. All Rights Reserved.</string>
    <string name="search_condition">major,minor,id</string>
    <string name="search_tips">SN,Name,Tags</string>
    <string name="have_no_signal">No Signal</string>
    <string name="no_connection">Please approach beacon to retry!</string>
    <string name="setting_power_tips">Tips: The higher transimit power can increase the coverage range of signal, but it will decrease the battery life.</string>
    <string name="setting_interval_tips">Tips: The shorter advertising interval result in quicker broadcast speed and increase the chance to be found, but it will significantly decrease battery life</string>
    <string name="min">MIN</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="upgrade">Upgrade</string>
    <string name="dialog_eid_tips">EID feature need UID. If you want to change UID, please change it in the Settings UID</string>
    <string name="dialog_eid_uid_tips">The UID below will be used.</string>
    <string name="sensoro_uuid">23A01AF0-232A-4518-9C0E-323FB773F5EF</string>
    <string name="airlocate_uuid">E2C56DB5-DFFB-48D2-B060-D0F5A71096E0</string>
    <string name="estimote_uuid">B9407F30-F5F8-466E-AFF9-25556B57FE6D</string>
    <string name="wx_uuid">FDA50693-A4E2-4FB1-AFCF-C6EB07647825</string>
    <string name="advance">Advance</string>
    <string name="setting_uuid">UUID</string>
    <string name="new_wx_uuid">AB8190D5-D11E-4941-ACC4-42F30510B408</string>
    <string name="new_wx">微信新增</string>
    <string name="kontakt">Kontakt</string>
    <string name="kontakt_uuid">F7826DA6-4FA2-4E98-8024-BC5B71E0893E</string>
</resources>