<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/dialog_eid_uid_tips"
        android:textColor="#666666"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#c8c7cc"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/dialog_eid_uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/uid"
        android:textColor="#666666"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#c8c7cc"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/dialog_eid_tips"
        android:textColor="#666666"
        android:textSize="14dp" />


</LinearLayout>